[gd_scene load_steps=4 format=3 uid="uid://703rmjgnxro0"]

[ext_resource type="Script" path="res://creditos.gd" id="1_3oanj"]
[ext_resource type="FontFile" uid="uid://dc526gcuwx4sa" path="res://fonts/DungeonFont.ttf" id="2_s1ewk"]
[ext_resource type="AudioStream" uid="uid://c4ovcduxxw2lh" path="res://sound/effect_menu1.MP3" id="3_dbnoh"]

[node name="Creditos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oanj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="Voltar" type="Button" parent="ColorRect"]
clip_contents = true
layout_mode = 0
offset_left = 21.0
offset_top = 22.0
offset_right = 131.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 41
text = "Voltar
"
flat = true

[node name="Proximo" type="Button" parent="ColorRect"]
clip_contents = true
offset_left = 991.0
offset_top = 21.0
offset_right = 1126.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0.399028, 0.171773, 0.0870879, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.172549, 0.0862745, 0.815686)
theme_override_colors/font_hover_color = Color(0.645746, 0.300631, 0.170564, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.172549, 0.0862745, 1)
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 41
text = "Proximo"
flat = true

[node name="Creditos" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 45
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 135
text = "Creditos
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 188.0
offset_right = 1153.0
offset_bottom = 484.0

[node name="Coder" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 70
text = "Coder - Francisco
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Artistas" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 70
text = "Artistas - Ana Julia, Laryssa e Iasmin
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game Designer" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 70
text = "Game Designer - Davi Miranda
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gerente" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.451669, 0.180639, 0, 1)
theme_override_colors/font_shadow_color = Color(0.863197, 0.37203, 3.85046e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.729412, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_s1ewk")
theme_override_font_sizes/font_size = 70
text = "Gerente - Joao Pedro
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dbnoh")

[connection signal="mouse_entered" from="ColorRect/Voltar" to="." method="_on_voltar_mouse_entered"]
[connection signal="pressed" from="ColorRect/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="mouse_entered" from="ColorRect/Proximo" to="." method="_on_proximo_mouse_entered"]
[connection signal="pressed" from="ColorRect/Proximo" to="." method="_on_proximo_pressed"]
